added three more articles

--- a/code/index.html
+++ b/code/index.html
@@ -54,6 +54,27 @@
         <h3 class="title-three">Rubrik</h3>
         <img class="img-small-news" src="./Elephants.jpg" alt="Picture of elephants" width="300px">
       </article>
+
+      <article class="small-news">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="img-small-news" src="./No-smoking.jpg" alt="Picture of no-smoking sign" width="300px">
+      </article>
+
+      <article class="small-news">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="img-small-news" src="" alt="" width="300px">
+      </article>
+
+      <article class="small-news">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="img-small-news" src="" alt="" width="300px">
+      </article>
+
+      <article class="small-news">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="img-small-news" src="" alt="" width="300px">
+      </article>
+      
     </section>
   </body>
 </html>
