--- a/code/index.html
+++ b/code/index.html
@@ -28,8 +28,6 @@
     </nav>
   </header>
 
-
-
   <section class="big-news">
     <article class=header>
       <h2>The world hasn't ended!</h2>
@@ -38,7 +36,7 @@
     </article>
   </section>
 
-  <hr class="hr-text" data-content="TOP NEWS">
+  <hr>
 
   <section class="small-news">
     <article class=smallstory>
@@ -82,6 +80,6 @@
 
 
   <footer>
-
+    <p>FOOTER</p>
 
   </footer>
