--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+        <!-- The big news content -->
     </section>
 
     <section class="">
-      <!-- The other news  -->
+        <!-- The other news  -->
     </section>
-  </body>
+    <button>Click</button>
+</body>
+
 </html>
