added logo and change nav

--- a/code/index.html
+++ b/code/index.html
@@ -4,14 +4,22 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project 2: The News Site</title>
+    <meta http-equiv="X-UA-Compaatible" content="i.e-edge">
+    <title>I did it - The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
 </head>
 
-<body>
+<body class=body>
     <header>
-        <!-- Some kind of logo and navbar -->
+        <img src="logo.svg" alt="Tecnigo">
+        <h1>This went down</h1>
+
+        <nav>
+            <a href="#">Me</a>
+            <a href="#">Myself</a>
+            <a href="#">I</a>
+        </nav>
     </header>
 
     <section class="big-news">
