added navbar and bignews content

--- a/code/index.html
+++ b/code/index.html
@@ -11,18 +11,22 @@
 </head>
 
 <body class=body>
-    <header>
-        <img src="logo.svg" alt="Tecnigo">
+    <header class="header">
+        <img class="logo" src="logo.svg" alt="Tecnigo">
         <h1>This went down</h1>
 
-        <nav>
-            <a href="#">Me</a>
-            <a href="#">Myself</a>
-            <a href="#">I</a>
+        <nav class="nav-bar">
+            <a class="nav-item" href="#">Me</a>
+            <a class="nav-item" href="#">Myself</a>
+            <a class="nav-item" href="#">I</a>
         </nav>
     </header>
 
     <section class="big-news">
+        <div class="news-card"></div>
+        <div class="news-card"></div>
+        <div class="news-card"></div>
+        <div class="news-card"></div>
         <!-- The big news content -->
     </section>
 
