--- a/code/index.html
+++ b/code/index.html
@@ -16,11 +16,19 @@
 
   <body class="container">
 
-    <header class="header container">
+    <header>
       <div class="left">
-        <div class="hamburger">hamburger</div>
-        <div class="logo">logo</div>
-        <div class="nameplate">Title</div>
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="logo">
+          <img src="/assets/logo.png" alt="logo image">
+        </div>
+        <div class="nameplate">
+          <img src="/assets/title.png" alt="website name">
+        </div>
       </div>
 
       <div class="middle">
