fixed img sizes in header

--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,9 @@
       </div>
 
       <div class="middle">
-        <div class="logo">logo</div>
+        <div class="logo">
+          <img src="/assets/logo.png" alt="logo image">
+        </div>
       </div>
 
       <div class="right">
