changes big news-card  both html and css

--- a/code/index.html
+++ b/code/index.html
@@ -16,21 +16,30 @@
         <h1>This went down</h1>
 
         <nav class="nav-bar">
-            <a class="nav-item" href="#">Me</a>
-            <a class="nav-item" href="#">Myself</a>
-            <a class="nav-item" href="#">I</a>
+            <a class="nav-item">Me</a>
+            <a class="nav-item">Myself</a>
+            <a class="nav-item">I</a>
+            <!--Om jag sätter #så blir de länkade-->
         </nav>
+
+        <!--div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>-->
+        </div>
+
     </header>
 
-    <section class="big-news">
-        <div class="news-card"></div>
-        <div class="news-card"></div>
-        <div class="news-card"></div>
-        <div class="news-card"></div>
+    <section class="big-news-container">
+        <div class="news-card">text</div>
+        <div class="news-card">text</div>
+        <div class="news-card">text</div>
+        <div class="news-card">text</div>
         <!-- The big news content -->
     </section>
 
     <section class="">
+
         <!-- The other news  -->
     </section>
 
