--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
   </head>
 <!-- should be 1. logo 2. site name 3. navbar -->
   <body>
-    <header class="coreNavigation-container">    
+    <header class="coreNavigation container">    
       <nav class="navigation-container">
         <div class="nav-item">Latest</div>
         <div class="nav-item">Today</div>
@@ -23,11 +23,18 @@
           <button class="button2">Subscribe now</button>
         </div>
     </header>
-
+ <!--
+    <section class="big-news container">
+      <div class="news-card"></div>
+      <div class="news-card"></div>
+      <div class="news-card"></div>
+      <div class="news-card"></div>
+    </section>
+  -->
     <section class="big-news container">
 
-      <div class="news-card">
-      <img class="photo-bar" src="/img/fusion-medical-animation-rnr8D3FNUNY-unsplash.png" alt="image of Corona virus" class="w3-image">
+    <div class="news-card">
+      <img class="photo-bar" src="/img/fusion-medical-animation-rnr8D3FNUNY-unsplash.png" alt="image of Corona virus">
       <p class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
         Volunteers are set to be deliberately infected with Covid-19 after the UK Government said it will set up human challenge trials to speed up the development of a vaccine.<br><br>
@@ -36,7 +43,7 @@
       </div>
 
       <div class="news-card">
-      <img class="photo-bar" src="/img/rom-matibag-uffK6VXLKdc-unsplash.png" alt="Image of a banner saying Trump got dump 2020" class="w3-image">
+      <img class="photo-bar" src="/img/rom-matibag-uffK6VXLKdc-unsplash.png" alt="Image of a banner saying Trump got dump 2020">
       <p class="text">  
       <h3>She Did It</h3>
         <b>Kamala Harris</b>, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
@@ -46,7 +53,7 @@
       </div>
       
       <div class="news-card">
-      <img class="photo-bar" src="/img/antidepressiv.png" alt="Image of antidepressiv" class="w3-image">
+      <img class="photo-bar" src="/img/antidepressiv.png" alt="Image of antidepressiv">
       <p class="text">
         <h3>Antidepressants - the temporary cure that became permanent</h3>
         Ineffective, says the child psychiatrist. A blessing, says the pharmacologist. Even among experts, the rift is deep in the view of antidepressant drugs.
@@ -54,7 +61,7 @@
       </div>
 
       <div class="news-card">
-      <img class="photo-bar" src="/img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person" class="w3-image">
+      <img class="photo-bar" src="/img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
         <p class="text">
           <h3>What it is like to carry on a tradition with a friend that can't remember it</h3>
           Part of a series on Friendship, today we continue by telling stories of human life through conversations with our frinds.
@@ -64,7 +71,7 @@
 
     <section class="more-news container">
       <div class="news-card">
-        <img class="photo-bar" src="/img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid" class="w3-image">
+        <img class="photo-bar" src="/img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid">
         <p class="text">
         <h2>"Evidence speaks against anxious middle-class parent"</h2>
         Children are irrational, researchers have long believed. Recent studies show that they use both statistics and probability to draw conclusions - and they are more creative problem solvers than adults, according to Stanford professor Alison Gopnik.
@@ -72,7 +79,7 @@
       </p>
     </div>
         <div class="news-card">
-          <img class="photo-bar" src="/img/wrongtog-S92jBfyENpI-unsplash.png" alt="Image of a line in neon" class="w3-image">
+          <img class="photo-bar" src="/img/wrongtog-S92jBfyENpI-unsplash.png" alt="Image of a line in neon">
         <p class="text">
           <h2>Saudi Arabia launches 170km city built in a straight line</h2>
 New eco-friendly project launched by the crown prince panned on social media as 'nonsense' and 'dreamed up from a sci-fi movie'
@@ -81,14 +88,14 @@ New eco-friendly project launched by the crown prince panned on social media as 
       
 
       <div class="news-card">
-        <img class="photo-bar" src="/img/edward-howell-zuel-45OtJo-unsplash.png" alt="Image of buildings and people" class="w3-image">
+        <img class="photo-bar" src="/img/edward-howell-zuel-45OtJo-unsplash.png" alt="Image of buildings and people">
         <p class="text">
           <h2>The escape from Stockholm is increasing</h2>
           More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from Statistics Sweden.
         </p>
       </div>
       <div class="news-card">
-        <img class="photo-bar" src="/img/ella-deane-YTRtCfniV8I-unsplash.png" alt="Image of a hand holding a book" class="w3-image">
+        <img class="photo-bar" src="/img/ella-deane-YTRtCfniV8I-unsplash.png" alt="Image of a hand holding a book">
         <p class="text">
           <h2>Rugged, Physical Work and reflection</h2>
           In Amos Velsinger's work the participating artists share a common desire for reading as dancing. The new piece premiered at the underground theatre The Place to be last friday.  
@@ -98,10 +105,10 @@ New eco-friendly project launched by the crown prince panned on social media as 
       </div>
     </section>
 
-      <section class="other-news container">
+    <section class="other-news container">
  sdfsfsfdsfsdffs
     </section>
-    <footer class="footer-container">
+    <footer class="footer container">
     <div class="footer-child-left">
     <div class="text">
     <nav class="navigation-container">
