--- a/code/index.html
+++ b/code/index.html
@@ -8,72 +8,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-      <header class="header">
-        <div class="hamburger">
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-        <h1 class="top-heading">Daily Hacker</h1>
-        <img class="logo" src="./logo.svg" alt="Technigo logo">
-        <nav class="navigation-container">
-          <a class="navigation-item" href="#">Top News</a>
-          <a class="navigation-item" href="#">Latest News</a>
-          <a class="navigation-item" href="#">Industry</a>
-          <a class="navigation-item" href="#">Navigate</a>
-
-        </nav>
-      </header>
-
-      <section class="big-news">
-        <div class="news-card-big">
-          <img class="news-card-pic-big" src="/top_new.jpg" alt="Picture of a computer">
-          <p class="big-news-text">The World's 50 Most Innovative Companies of 2021</p2> 
-        </div>
-        <div class="news-card-big">
-          <img class="news-card-pic-big" src="/drone.jpg" alt="Picture of a drone">
-          <p class="big-news-text">4 Steps for Making an Excellent 3D Model With a Drone</p2> 
-        </div>
-      </section>
-
-    <div class="news-section"><h2>Top news</h2></div>
-    <section class="other-news">
-      <div class="news-card">
-        <img class="news-card-pic" src="/computer-screen.jpg" alt="Picture of a computer screen">
-        <p class="news-card-text">Hackers targeted Covid vaccine supply 'cold chain'</p>
+    <header class="header container">
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
+      <h1 class="top-heading">Daily Hacker</h1>
+      <img class="logo" src="./logo.svg" alt="Technigo logo">
+      <nav class="navigation-container">
+        <a class="navigation-item" href="#">Top News</a>
+        <a class="navigation-item" href="#">Latest News</a>
+        <a class="navigation-item" href="#">Industry</a>
+        <a class="navigation-item" href="#">Contact Us</a>
+      </nav>
+    </header>
+
+    <section class="big-news container">
       <div class="news-card">
-        <img class="news-card-pic" src="/robot.jpg" alt="Picture of a robot">
-        <p class="news-card-text">Robot Displays a Glimmer of Empathy to a Partner Robot</p>
-      </div>
-      <div class="news-card">
-        <img class="news-card-pic" src="/tech_pic.jpg" alt="Picture of a computers">
-        <p class="news-card-text">Coronavirus: How the world of work may change forever</p>
-      </div>
-        <div class="news-card">
-        <img class="news-card-pic" src="/watch_pic.jpg" alt="Picture of a watch">
-        <p class="news-card-text">How to keep fit with Apple Watch: A complete guide</p>
+        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1524289286702-f07229da36f5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
+        <div class="big-news-text">Lorem Ipsum</div> 
+        </div>
       </div>
     </section>
 
-    <div class="news-section"><h2>Latest</h2></div>
-    <section class="other-news">
+    <section class="other-news container">
       <div class="news-card">
-        <img class="news-card-pic" src="/virtual-reality.jpg" alt="Picture of virtual reality">
-          <p class="news-card-text">The Best VR Headsets to Try 2021</p>
+        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1523503211343-9bb90cc3cb56?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+        <div class="big-news-text">Lorem Ipsum</div> 
+        </div>
       </div>
       <div class="news-card">
-          <img class="news-card-pic" src="/pet_photo.jpg" alt="Picture of a man and a dog">
-          <p class="news-card-text">Pet Care Startup Rover Lays Off 41% of Workforce due to COVID-19 Impact</p>
+        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+        <div class="big-news-text">Lorem Ipsum</div> 
+        </div>
       </div>
       <div class="news-card">
-        <img class="news-card-pic" src="/instagram.jpg" alt="Picture of a man and a dog">
-        <p class="news-card-text">The Top Instagram Updates You Need to Know: January 2021</p>
+        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1511680059018-e7cc6c0f22c8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+        <div class="big-news-text">Lorem Ipsum</div> 
+        </div>
       </div>
       <div class="news-card">
-        <img class="news-card-pic" src="/uber.jpg" alt="Picture of a man and a dog">
-        <p class="news-card-text">Amazon Takes on Uber with Investment in Food Delivery Firm Deliveroo</p>
-      </div>
+        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1504985954001-5737b2af529e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=779&q=80">
+        <div class="big-news-text">Lorem Ipsum</div> 
+        </div>
+      </div>      
     </section>
+    <footer class="footer container">
+      <div>About us</div>
+      <div>Career</div>
+      <div>Contact</div>
+    </footer>
   </body>
 </html>
