--- a/code/index.html
+++ b/code/index.html
@@ -29,12 +29,15 @@
         </div>
 
     </header>
+    <section class="head-news">
+        <img src="https://images.unsplash.com/photo-1429962714451-bb934ecdc4ec?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="person hartshape hand">
+    </section>
 
     <section class="big-news-container">
-        <div class="news-card">text</div>
-        <div class="news-card">text</div>
-        <div class="news-card">text</div>
-        <div class="news-card">text</div>
+        <div class="news-card">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sit, ipsam saepe id modi blanditiis perspiciatis cumque corrupti quasi, enim harum sed libero laudantium, dolores beatae ut molestias optio voluptatibus.</div>
+        <div class="news-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, sed aperiam pariatur esse officia qui ullam saepe consectetur magni autem possimus amet adipisci dicta soluta sequi, libero aliquid maxime! Enim!</div>
+        <div class="news-card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At ut non ratione earum illum, quibusdam voluptates ad quis magni iure enim, perspiciatis nulla itaque quod doloremque, nam dignissimos nobis possimus!</div>
+        <div class="news-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati mollitia, temporibus incidunt, vero tempora pariatur blanditiis, cupiditate fugiat nihil labore recusandae adipisci! Odio quae veritatis distinctio qui debitis et delectus.</div>
         <!-- The big news content -->
     </section>
 
