background color and major changes is general

--- a/code/index.html
+++ b/code/index.html
@@ -8,29 +8,47 @@
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="./logo.svg">
-      <h1 class="title">Space News</h1>
-      <nav class="navigation-bar"> 
-        <div class="navigation-items">About us</div>
-        <div class="navigation-items">News</div>
-        <div class="navigation-items">Stories</div>
-        <div class="navigation-items">Contact</div>
-        </nav>
-      </div>  
+      <div class="left">
+        <img class="logo" src="./logo.svg">
+      </div>
+      <div class="middle">
+        <h1 class="title">Space News</h1>
+        <nav class="navigation-bar"> 
+          <div class="navigation-items">About us</div>
+          <div class="navigation-items">News</div>
+          <div class="navigation-items">Stories</div>
+          <div class="navigation-items">Contact</div>
+          </nav>
+      </div>
+      <div class="right">
+        <img class="logo" src="./logo.svg">
+      </div>
+      </div> 
     </header>
 
     <section class="big-news">
-      <div class="news-card">Norrsken</div>
-      <div class="news-card">Eclipse</div>
-      <div class="news-card">Meteor</div>
-      <div class="news-card">Telescope</div>
-
-      </article>
-      <!-- The big news content -->
+      <img class="big-picture" src="./green aurora boralis.jpg" alt="picture of green aurora borealis">
+      <div class="news-card1">An aurora (plural: auroras or aurorae),[a] sometimes referred to as polar lights (aurora polaris), northern lights (aurora borealis), or southern lights (aurora australis), is a natural light display in the Earth's sky, predominantly seen in high-latitude regions (around the Arctic and Antarctic). Auroras are the result of disturbances in the magnetosphere caused by solar wind. These disturbances are sometimes strong enough to alter the trajectories of charged particles in both solar wind and magnetospheric plasma. These particles, mainly electrons and protons, precipitate into the upper atmosphere (thermosphere/exosphere).</div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-cards">
+      <div class="news-card2">
+        <img class="small-image" src="./meteor_in_the_sky.jpg" alt="meteor int the sky">
+        <p class="small-text">Meteor showers every year</p>
+      </div>
+      <div class="news-card2">
+        <img class="small-image" src="./Sun and frost creating a halo.jpg" alt="sun creating halo">
+        <p class="small-text">Suns i creating a halo</p>
+      </div>
+      <div class="news-card2">
+        <img class="small-image" src="./galaxy.jpg" alt="galaxy">
+        <p class="small-text">There are many galaxies</p>
+      </div>
+      <div class="news-card2">
+        <img class="small-image" src="./rocket.jpg" alt="rocket">
+        <p class="small-text">Telescope has helped science</p>
+      </div>
+      
     </section>
   </body>
 </html>
