flexbox layout, buttons and news card

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="widht= device-width,initial-scale= 1.0">  
+    <style>@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');</style> 
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,600;1,500;1,600&display=swap');</style>
   </head>
+  
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
+    <!--*** HEADER SECTION ***-->
+    <section class="header">
+      <section class="hamburger">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+      </section>
+     <nav class= "nav">
+        <a class="link" href="">ABOUT US</a>
+        <a class="link" href="">NEWS</a>
+        <a class="link" href="">SIGN UP</a>
+        <a class="link" href="">CONTACT</a> 
+     </nav> 
+     <img class="logo" src="./logo.svg" alt="">
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <!--/*** HERO SECTION***/-->
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Happy News</h1>
+      </div>
     </section>
+  
+    <!--*** NEWS TEXT ***-->
+    <main>
+      <section class="main-news">
+        <h2>Header for the text </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officiis odit sint sapiente perspiciatis repellendus veniam iste tempore nostrum accusamus nihil provident tempora obcaecati, quasi reprehenderit amet neque recusandae quod! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero quia ut laboriosam illo, earum consectetur excepturi nobis deserunt tenetur quo commodi veritatis totam dignissimos nihil exercitationem! Aut, enim quo. Perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus consequatur ad? Alias ipsam nisi fuga corporis totam, suscipit distinctio nemo, mollitia blanditiis quis optio magni voluptatibus molestiae amet </p>
+      </section>
+    </main>
+  
+    <figure class="figure">
+      <div class="image-container">
+        <div class="image">
+          <img class="image1" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Just be happy</figcaption>
+        </div>
+        <div class="image">
+          <img class="image2" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption> happy place</figcaption>
+        </div>
+        <div class="image">
+          <img class="image3" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Music brings us joy</figcaption>
+        </div>
+        <div class="image">
+          <img class="image4" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Cheer someone up </figcaption>
+        </div>
+        <div class="image">
+          <img class="image5" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Don't forget to play</figcaption>
+        </div>
+        <div class="image">
+          <img class="image6" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Today just smile</figcaption>
+        </div>
+        <div class="image">
+          <img class="image7" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Today just smile</figcaption>
+        </div>
+        <div class="image">
+          <img class="image8" src="http://placekitten.com/200/300
+          " alt="">
+          <figcaption>Today just smile</figcaption>
+        </div>
+      </div>
+    </figure>
+  
+    <!--*** FOOTER ***-->
+    <footer>
+      <p>&copy; Maria Sparre 2021 - Project 2, News site</p>
+    </footer>
   </body>
-</html>
+  
+  </html>
